[project]
name = "console_bot_Volodymyr_Pryhlo"
version = "0.0.1"
authors = [
          {name = "Volodymyr Pryhlo", email = "vova.pruglo22@gmail.com"},
]

description = "This is console bot helper"
readme = "README.md"
classifiers = [
              "Programming Language :: Python :: 3",
              "License :: OSI Approved :: MIT License",
              "Operating System :: OS Independent"
              ]


[options.entry_points]
console_scripts =
    start = console_bot = console_bot.main:main


[options]
install_requires = []
packages = find:
python_requires = >=3.7


[project.urls]
"Github" = "https://github.com/pypa/sampleproject"